--- a/src/DaHo.Chip8/DaHo.Chip8.csproj
+++ b/src/DaHo.Chip8/DaHo.Chip8.csproj
@@ -6,11 +6,21 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Include="..\..\res\cascadia.ttf" Link="res\cascadia.ttf">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="SFML.Net" Version="2.5.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\DaHo.Chip8.Cpu\DaHo.Chip8.Cpu.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="res\" />
   </ItemGroup>
 
 </Project>
