--- a/src/DaHo.Chip8/Properties/launchSettings.json
+++ b/src/DaHo.Chip8/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "DaHo.Chip8": {
       "commandName": "Project",
-      "commandLineArgs": "\"C:\\Users\\David\\Downloads\\Landing.ch8\""
+      "commandLineArgs": "C:\\Users\\vmadmin\\Desktop\\roms\\invaders"
     }
   }
 }
