--- a/src/DaHo.Chip8.Sfml/Properties/launchSettings.json
+++ b/src/DaHo.Chip8.Sfml/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "DaHo.Chip8": {
       "commandName": "Project",
-      "commandLineArgs": "\"C:\\Users\\David\\Desktop\\roms\\invaders\""
+      "commandLineArgs": "\"C:\\Users\\David\\Desktop\\roms\\15puzzle\""
     }
   }
 }
